# Real-Time-System-project

./: .gitattributes  .gitignore  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  RTS2601_AssignmentBrief_v1.docx  luminous-jumping-twilight.md
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: ci.yml
crates/rts-async/: Cargo.toml
crates/rts-async/src/: ingest.rs  leaderboard.rs  lib.rs  parser.rs  pipeline.rs  scheduler.rs
crates/rts-bench/: Cargo.toml
crates/rts-bench/benches/: placeholder.rs  sync_shootout.rs  tail_latency.rs
crates/rts-bench/src/: lib.rs
crates/rts-cli/: Cargo.toml
crates/rts-cli/src/: main.rs
crates/rts-core/: Cargo.toml
crates/rts-core/src/: error.rs  event.rs  failsafe.rs  lib.rs  metrics.rs  priority.rs  task.rs  time.rs  watchdog.rs
crates/rts-core/src/channel/: mod.rs  ring.rs
crates/rts-replay/: Cargo.toml
crates/rts-replay/src/: lib.rs  play.rs  record.rs
crates/rts-threaded/: Cargo.toml
crates/rts-threaded/src/: ingest.rs  leaderboard.rs  lib.rs  parser.rs  pipeline.rs  scheduler.rs
docs/research-report/: report.docx  report.md
fixtures/: recentchange-60s.ndjson
reports/csv/: async_run1.csv  async_run1.hgrm  async_run1_wsl.csv  async_run1_wsl.hgrm  demo_async.csv  demo_async.hgrm  stress_async_100x.csv  stress_async_100x.hgrm  stress_async_10x.csv  stress_async_10x.hgrm  stress_async_1x.csv  stress_async_1x.hgrm  stress_threaded_100x.csv  stress_threaded_100x.hgrm  stress_threaded_10x.csv  stress_threaded_10x.hgrm  stress_threaded_1x.csv  stress_threaded_1x.hgrm  threaded_run1.csv  threaded_run1.hgrm  threaded_run1_wsl.csv  threaded_run1_wsl.hgrm  util_check.csv  util_check.hgrm  util_check2.csv  util_check2.hgrm
reports/dhat/: owned_baseline.json  zero_copy.json
reports/runs/: stress_async_100x.txt  stress_async_10x.txt  stress_async_1x.txt  stress_threaded_100x.txt  stress_threaded_10x.txt  stress_threaded_1x.txt  util_samples.txt
scripts/: analyse_bench.py  demo.ps1  demo.sh  plot_latency.py  plot_shootout.py
