[workspace]
resolver = "2"
members = [
    "crates/rts-core",
    "crates/rts-async",
    "crates/rts-threaded",
    "crates/rts-bench",
    "crates/rts-cli",
    "crates/rts-replay",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
license = "MIT OR Apache-2.0"
authors = ["Taha Thabit <tahafahd40@gmail.com>"]
repository = "https://github.com/6rzan/Real-Time-System-project"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", default-features = false }
tokio-stream = "0.1"
tokio-util = { version = "0.7", default-features = false }
futures = { version = "0.3", default-features = false }

# HTTP / SSE
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
eventsource-stream = "0.2"
ureq = { version = "2.10", default-features = false, features = ["tls"] }
axum = { version = "0.7", default-features = false, features = ["http1", "tokio"] }
hyper = { version = "1.5", default-features = false }

# Serde / JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Concurrency primitives
parking_lot = "0.12"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
dashmap = "6"

# Metrics / benchmarking
hdrhistogram = "7.5"
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }

# Heap profiling (feature-gated)
dhat = "0.3"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# CLI / errors
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
thiserror = "2"

# Misc
core_affinity = "0.8"
num_cpus = "1.16"
rand = "0.8"
bytes = "1"

# Test-only
proptest = "1"

# Internal crates
rts-core = { path = "crates/rts-core" }
rts-async = { path = "crates/rts-async" }
rts-threaded = { path = "crates/rts-threaded" }
rts-replay = { path = "crates/rts-replay" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
panic = "unwind"

[profile.bench]
inherits = "release"
debug = "line-tables-only"

# Dev profile: keep debuggable but with some optimisation so SSE benches don't crawl
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
